[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/chain/chain3.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/chain/chain5.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/character_select/CharacterPickerSign.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/GUI/Signs/CharacterSelect/Title.png" type="Texture" id=4]
[ext_resource path="res://menus/character_select/character_select.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 210, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 225, 32 )

[node name="CharacterSelect" type="Node2D"]
use_parent_material = true
script = ExtResource( 5 )
selecters = [ NodePath("CharacterPicker"), NodePath("CharacterPicker2"), NodePath("CharacterPicker3"), NodePath("CharacterPicker4") ]

[node name="Mount" type="StaticBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -440 )
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mount"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Chains" type="Node2D" parent="."]
use_parent_material = true

[node name="Chain" parent="Chains" instance=ExtResource( 2 )]
position = Vector2( -200, -437 )
first_mount_path = NodePath("../../Mount")
last_mount_path = NodePath("../../Title")

[node name="Chain2" parent="Chains" instance=ExtResource( 2 )]
position = Vector2( 200, -437 )
first_mount_path = NodePath("../../Mount")
last_mount_path = NodePath("../../Title")

[node name="Chain3" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( -192, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker")

[node name="Chain4" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( -128, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker")

[node name="Chain5" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( -84, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker2")

[node name="Chain6" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( -20, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker2")

[node name="Chain7" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( 20, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker3")

[node name="Chain8" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( 84, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker3")

[node name="Chain9" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( 128, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker4")

[node name="Chain10" parent="Chains" instance=ExtResource( 1 )]
position = Vector2( 192, -333 )
first_mount_path = NodePath("../../Title")
last_mount_path = NodePath("../../CharacterPicker4")

[node name="Title" type="RigidBody2D" parent="."]
use_parent_material = true
position = Vector2( 0, -360 )
z_index = 15
z_as_relative = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Title"]
use_parent_material = true
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CharacterPicker" parent="." instance=ExtResource( 3 )]
position = Vector2( -160, -235 )

[node name="CharacterPicker2" parent="." instance=ExtResource( 3 )]
position = Vector2( -52, -235 )
box_id = 2

[node name="CharacterPicker3" parent="." instance=ExtResource( 3 )]
position = Vector2( 52, -235 )
box_id = 3

[node name="CharacterPicker4" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, -235 )
box_id = 4

[node name="Tween" type="Tween" parent="."]

[connection signal="pick_character" from="CharacterPicker" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CharacterPicker" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CharacterPicker" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CharacterPicker2" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CharacterPicker2" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CharacterPicker2" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CharacterPicker3" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CharacterPicker3" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CharacterPicker3" to="." method="_on_CharacterPicker_unpick_character"]
[connection signal="pick_character" from="CharacterPicker4" to="." method="_on_CharacterPicker_pick_character"]
[connection signal="start" from="CharacterPicker4" to="." method="_on_CharacterPicker_start"]
[connection signal="unpick_character" from="CharacterPicker4" to="." method="_on_CharacterPicker_unpick_character"]
